[gd_scene load_steps=31 format=3 uid="uid://cw3fytedhcond"]

[ext_resource type="PackedScene" uid="uid://bang5x2fmjbqa" path="res://Bubble.tscn" id="1_qb4lu"]
[ext_resource type="Script" path="res://bigger_action.gd" id="1_x3owy"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_3krdm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="6_4qnw1"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_srtkp"]
[ext_resource type="PackedScene" uid="uid://dstnlhot3hnbu" path="res://analyzer.tscn" id="8_c5h0i"]
[ext_resource type="Shader" path="res://Wall.gdshader" id="8_inrbe"]
[ext_resource type="FontFile" uid="uid://c5tfxaby7jjp4" path="res://Pixel-UniCode.ttf" id="8_ytren"]
[ext_resource type="Texture2D" uid="uid://6cyyd0djnb4h" path="res://icon.svg" id="9_68cxu"]
[ext_resource type="PackedScene" uid="uid://c83kgk5b5csyh" path="res://Goldfish.tscn" id="9_sdarn"]
[ext_resource type="PackedScene" uid="uid://dvmmdittu5ybs" path="res://Octopus.tscn" id="10_2m3hi"]
[ext_resource type="PackedScene" uid="uid://dljv1peahyitd" path="res://OuchObject.tscn" id="10_8kk5q"]
[ext_resource type="PackedScene" uid="uid://byo66jepmcpvx" path="res://Crab.tscn" id="11_2k140"]
[ext_resource type="Shader" path="res://Kaleidoscope.gdshader" id="11_kadb5"]
[ext_resource type="Script" path="res://speed_label.gd" id="12_1owby"]
[ext_resource type="Script" path="res://points_label.gd" id="12_8cai6"]
[ext_resource type="Script" path="res://spawner.gd" id="14_rlfbp"]
[ext_resource type="PackedScene" uid="uid://4g0omo5v0u77" path="res://waffle.tscn" id="17_gws7k"]
[ext_resource type="AudioStream" uid="uid://dnl7c0y7gksmy" path="res://audio/background-music.mp3" id="18_tcloy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6rmyk"]
shader = ExtResource("8_inrbe")
shader_parameter/background_color = Color(0.270588, 0.356863, 0.427451, 0.721569)
shader_parameter/bubble_color = Color(1, 1, 1, 1)
shader_parameter/bubble_opacity = 0.177
shader_parameter/bubble_speed = 0.186
shader_parameter/bubble_count = 250

[sub_resource type="Gradient" id="Gradient_qjlpt"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gewrt"]
gradient = SubResource("Gradient_qjlpt")
width = 2210
height = 3840

[sub_resource type="Resource" id="Resource_g78yk"]
script = ExtResource("7_srtkp")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g24o1"]
shader = ExtResource("11_kadb5")
shader_parameter/color_speed = 0.01
shader_parameter/brightness = 0.003
shader_parameter/complexity = 1.0
shader_parameter/periodicity = 8.0
shader_parameter/fractal_force = 1.5
shader_parameter/a = Vector3(0.9, 0.832, 0.92)
shader_parameter/b = Vector3(1.5, 0.468, 0.573)
shader_parameter/c = Vector3(0.534, 1.034, 1.222)
shader_parameter/d = null

[sub_resource type="Gradient" id="Gradient_qq0mx"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7frkd"]
gradient = SubResource("Gradient_qq0mx")
width = 1000
height = 10000

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jaunh"]
b = Vector2(0, 3840)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e16c4"]
shader = ExtResource("11_kadb5")
shader_parameter/color_speed = 0.01
shader_parameter/brightness = 0.003
shader_parameter/complexity = 1.0
shader_parameter/periodicity = 8.0
shader_parameter/fractal_force = 1.5
shader_parameter/a = Vector3(0.9, 0.832, 0.92)
shader_parameter/b = Vector3(1.5, 0.468, 0.573)
shader_parameter/c = Vector3(0.534, 1.034, 1.222)
shader_parameter/d = null

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0wjs7"]
b = Vector2(0, 3840)

[sub_resource type="Environment" id="Environment_8vg2f"]
background_mode = 3
glow_enabled = true

[node name="BiggerAction" type="Node2D"]
script = ExtResource("1_x3owy")
bubble_player_path = NodePath("PlayableLayer/Bubble")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Water" type="Sprite2D" parent="BackgroundLayer"]
material = SubResource("ShaderMaterial_6rmyk")
position = Vector2(496, 80.27)
rotation = 3.14159
texture = SubResource("GradientTexture2D_gewrt")

[node name="Parallax2D" type="Parallax2D" parent="BackgroundLayer"]

[node name="PlayableLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Bubble" parent="PlayableLayer" instance=ExtResource("1_qb4lu")]
position = Vector2(508, 1635.87)

[node name="MashTimer" type="Timer" parent="PlayableLayer"]
unique_name_in_owner = true

[node name="PhantomCamera2D" type="Node2D" parent="PlayableLayer"]
position = Vector2(508, 80)
script = ExtResource("6_4qnw1")
zoom = Vector2(0.55, 0.55)
tween_resource = SubResource("Resource_g78yk")
draw_limits = true
limit_bottom = 2000

[node name="Wall" type="StaticBody2D" parent="PlayableLayer"]
position = Vector2(-575.91, 0)

[node name="Sprite2D" type="Sprite2D" parent="PlayableLayer/Wall"]
material = SubResource("ShaderMaterial_g24o1")
position = Vector2(-496.11, 0)
texture = SubResource("GradientTexture2D_7frkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableLayer/Wall"]
shape = SubResource("SegmentShape2D_jaunh")

[node name="Wall2" type="StaticBody2D" parent="PlayableLayer"]
position = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="PlayableLayer/Wall2"]
material = SubResource("ShaderMaterial_e16c4")
position = Vector2(500.09, 0)
texture = SubResource("GradientTexture2D_7frkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableLayer/Wall2"]
shape = SubResource("SegmentShape2D_jaunh")

[node name="Wall3" type="StaticBody2D" parent="PlayableLayer"]
position = Vector2(1600, 0)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="PlayableLayer/Wall3"]
material = SubResource("ShaderMaterial_e16c4")
position = Vector2(4060.14, 1068)
texture = SubResource("GradientTexture2D_7frkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableLayer/Wall3"]
position = Vector2(3558.37, 0)
shape = SubResource("SegmentShape2D_0wjs7")

[node name="SpawnMarkerEnd" type="Marker2D" parent="PlayableLayer"]
position = Vector2(1535, -1862)

[node name="Sprite2D" type="Sprite2D" parent="PlayableLayer/SpawnMarkerEnd"]
visible = false
texture = ExtResource("9_68cxu")

[node name="SpawnMarkerStart" type="Marker2D" parent="PlayableLayer"]
position = Vector2(-530, -1862)

[node name="Sprite2D" type="Sprite2D" parent="PlayableLayer/SpawnMarkerStart"]
visible = false
position = Vector2(0, -88)
texture = ExtResource("9_68cxu")

[node name="Camera2D" type="Camera2D" parent="PlayableLayer"]
position = Vector2(508, 80)
zoom = Vector2(0.55, 0.55)
limit_bottom = 2000
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PhantomCameraHost" type="Node" parent="PlayableLayer/Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("5_3krdm")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Analyzer" parent="UILayer" instance=ExtResource("8_c5h0i")]
z_index = -1
metadata/_edit_lock_ = true

[node name="PointsLabel" type="RichTextLabel" parent="UILayer"]
unique_name_in_owner = true
offset_right = 494.0
offset_bottom = 136.0
theme_override_fonts/normal_font = ExtResource("8_ytren")
theme_override_fonts/bold_font = ExtResource("8_ytren")
theme_override_font_sizes/normal_font_size = 120
theme_override_font_sizes/bold_font_size = 120
bbcode_enabled = true
text = "[b][rainbow]Points: [/rainbow][/b]"
fit_content = true
scroll_active = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("12_8cai6")

[node name="SpeedLabel" type="RichTextLabel" parent="UILayer"]
unique_name_in_owner = true
visible = false
offset_top = 79.0
offset_right = 685.0
offset_bottom = 215.0
theme_override_fonts/normal_font = ExtResource("8_ytren")
theme_override_fonts/bold_font = ExtResource("8_ytren")
theme_override_font_sizes/normal_font_size = 120
theme_override_font_sizes/bold_font_size = 120
bbcode_enabled = true
text = "[b][rainbow]Speed: [/rainbow][/b]"
fit_content = true
scroll_active = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("12_1owby")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8vg2f")

[node name="DeathLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="DeathRect" type="ColorRect" parent="DeathLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1080, 1920)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 3
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="DeathText" type="RichTextLabel" parent="DeathLayer/DeathRect"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(520, 0)
layout_mode = 0
offset_left = 299.0
offset_top = 826.0
offset_right = 819.66
offset_bottom = 970.0
theme_override_fonts/normal_font = ExtResource("8_ytren")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0 connected=1]BUBBLE DIED ON THE WAY BACK TO HIS HOME PLANET[/wave][/center]"
fit_content = true
scroll_active = false

[node name="Spawner" type="Node" parent="."]
script = ExtResource("14_rlfbp")
possible_suckable_nodes = Array[PackedScene]([ExtResource("9_sdarn"), ExtResource("10_2m3hi"), ExtResource("11_2k140")])
possible_ouch_nodes = ExtResource("10_8kk5q")
possible_waffles = ExtResource("17_gws7k")
spawn_marker_path_start = NodePath("../PlayableLayer/SpawnMarkerStart")
spawn_marker_path_end = NodePath("../PlayableLayer/SpawnMarkerEnd")
gameplay_area_path = NodePath("../PlayableLayer")

[node name="SpawnTimer" type="Timer" parent="Spawner"]
unique_name_in_owner = true
wait_time = 1.5
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("18_tcloy")
volume_db = -10.0
autoplay = true

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
